<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_beige"
    tools:context=".view.FragmentQuiz">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courier_regular"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"
            android:layout_weight="1"
            android:text="@string/correct_text"/>

        <TextView
            android:id="@+id/tv_correct_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courier_regular"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/correct_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courier_regular"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"
            android:layout_weight="1"
            android:text="@string/empty_text"/>

        <TextView
            android:id="@+id/tv_empty_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courier_regular"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_weight="1"
            android:text="@string/empty_number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courier_regular"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_weight="1"
            android:text="@string/wrong_text"/>

        <TextView
            android:id="@+id/tv_wrong_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courier_regular"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_weight="1"
            android:text="@string/wrong_number"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:text="@string/question_number"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        android:fontFamily="@font/courier_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="64dp" />
</androidx.constraintlayout.widget.ConstraintLayout>