<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_beige"
    tools:context=".view.FragmentHome">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:textSize="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/courier_regular"
        android:text="@string/app_name">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/courier_regular"
        android:textSize="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/app_name_subtitle">

    </TextView>

    <Button
        android:fontFamily="@font/courier_regular"
        android:textSize="24dp"
        android:id="@+id/btn_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/btn_start"

        app:cornerRadius="2dp" />

</LinearLayout>